начал реализовать классс complex + прочее

--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -27,6 +27,10 @@
         <main>
             <h1>Quadratic equation solver!</h1>
 
+            <p>
+                Вводите данные, обозначающие три коэффициента для комплексного уравнения вида ax<sup>2</sup>+bx+c=0
+            </p>
+
             <div class="input">
                 <input type="text" id="a">
                 <input type="text" id="b">
@@ -37,9 +41,9 @@
             <div class="answers">
                 <dl>
                     <dt>x1</dt>
-                    <dd>1</dd>
+                    <dd>?</dd>
                     <dt>x2</dt>
-                    <dd>2</dd>
+                    <dd>?</dd>
                 </dl>
             </div>
         </main>
