--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -10,7 +10,9 @@
         <title>some site</title>
 
         <link rel="stylesheet" href="../styles/styles.css">
+        
         <script src="quadratic.js" defer></script>
+        <script src="../scripts/complex.js" defer></script>
     </head>
     <body>
         <header>
