лучшая структура файлов. Много улучшений

--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -11,8 +11,9 @@
 
         <link rel="stylesheet" href="../styles/styles.css">
         
-        <script src="quadratic.js" defer></script>
         <script src="../scripts/complex.js" defer></script>
+        <script src="quadracricEquation.js" defer></script>
+        <script src="dataProcessing2.js" defer></script>
     </head>
     <body>
         <header>
