--- a/cubic/cubic.html
+++ b/cubic/cubic.html
@@ -11,7 +11,10 @@
 
         <link rel="stylesheet" href="../styles/styles.css">
         
-        <script src="cubic.js" defer></script>
+        <script src="../scripts/complex.js" defer></script>
+        <script src="../quadratic/quadracricEquation.js" defer></script>
+        <script src="cubicEquation.js" defer></script>
+        <script src="dataProcessing3.js" defer></script>
     </head>
     <body>
         <header>
