--- a/quartic/quartic.html
+++ b/quartic/quartic.html
@@ -10,6 +10,11 @@
         <title>some site</title>
 
         <link rel="stylesheet" href="../styles/styles.css">
+
+        <script src="../scripts/complex.js" defer></script>
+        <script src="../quadratic/quadracricEquation.js" defer></script>
+        <script src="../cubic/cubicEquation.js" defer></script>
+        <script src="dataProcessing4.js" defer></script>
     </head>
     <body>
         <header>
