потом доделаю quartic (надо quadr с компл коэфами)

--- a/quartic/quartic.html
+++ b/quartic/quartic.html
@@ -29,6 +29,33 @@
         </header>
 
         <main>
+            <h1>Quartic equation solver!</h1>
+
+            <p>
+                Вводите данные, обозначающие пять коэффициентов для комплексного уравнения вида ax<sup>4</sup>+bx<sup>3</sup>+cx<sup>2</sup>+dx+e=0
+            </p>
+
+            <div class="input">
+                <input type="text" id="a">
+                <input type="text" id="b">
+                <input type="text" id="c">
+                <input type="text" id="d">
+                <input type="text" id="e">
+            </div><br>
+            <input type="submit" value="Solve" class="solveIt">
+
+            <div class="answers">
+                <dl>
+                    <dt>x1</dt>
+                    <dd>?</dd>
+                    <dt>x2</dt>
+                    <dd>?</dd>
+                    <dt>x3</dt>
+                    <dd>?</dd>
+                    <dt>x4</dt>
+                    <dd>?</dd>
+                </dl>
+            </div>
         </main>
 
         <br><br>
