--- a/cubic/cubic.html
+++ b/cubic/cubic.html
@@ -36,10 +36,10 @@
             </p>
 
             <div class="input">
-                <input type="text" id="a">
-                <input type="text" id="b">
-                <input type="text" id="c">
-                <input type="text" id="d">
+                <input class="numberInput" type="text" id="a">
+                <input class="numberInput" type="text" id="b">
+                <input class="numberInput" type="text" id="c">
+                <input class="numberInput" type="text" id="d">
             </div><br>
             <input type="submit" value="Solve" class="solveIt">
 
