--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -35,10 +35,10 @@
             </p>
 
             <div class="input">
-                <input type="text" id="a">
-                <input type="text" id="b">
-                <input type="text" id="c">
-            </div><br>
+                <input class="numberInput" type="text" id="a">
+                <input class="numberInput" type="text" id="b">
+                <input class="numberInput" type="text" id="c">
+            </div>
             <input type="submit" value="Solve" class="solveIt">
 
             <div class="answers">
