--- a/quartic/quartic.html
+++ b/quartic/quartic.html
@@ -36,11 +36,11 @@
             </p>
 
             <div class="input">
-                <input type="text" id="a">
-                <input type="text" id="b">
-                <input type="text" id="c">
-                <input type="text" id="d">
-                <input type="text" id="e">
+                <input class="numberInput" type="text" id="a">
+                <input class="numberInput" type="text" id="b">
+                <input class="numberInput" type="text" id="c">
+                <input class="numberInput" type="text" id="d">
+                <input class="numberInput" type="text" id="e">
             </div><br>
             <input type="submit" value="Solve" class="solveIt">
 
