--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="">
+        <meta name="viewport" content="width=device-width">
 
         <meta name="author" content="Soghoyan Vazgen">
         <meta name="description" content="solving some complex equation">
