плохо, но реализовал с компл коэфами

--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../styles/styles.css">
         
         <script src="../scripts/complex.js" defer></script>
-        <script src="quadracricEquation.js" defer></script>
+        <script src="quadraticEquation.js" defer></script>
         <script src="dataProcessing2.js" defer></script>
     </head>
     <body>
