small style changes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <main>
             <article>
                 <h1>Equation Solver</h1>
-                <p>This is the site that solves complex 
+                <p>This is the site that solves 
                     <a href="https://en.wikipedia.org/wiki/Equation">equations</a> of 
-                    the 2nd, 3rd and 4th degrees.
+                    the 2nd, 3rd and 4th degrees with complex coefficients.
                     <br>
                     Good luck!
                 </p>
