--- a/cubic/cubic.html
+++ b/cubic/cubic.html
@@ -23,7 +23,7 @@
                     <li><a href="../index.html">Main page</a></li>
                     <li><a href="../quadratic/quadratic.html">Quadratic</a></li>
                     <li class="current">Cubic</li>
-                    <!--<li><a href="../quartic/quartic.html">Quartic</a></li>-->
+                    <li><a href="../quartic/quartic.html">Quartic</a></li>
                 </ul>
             </nav>
         </header>
