--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="current">Main page</li>
                 <li><a href="quadratic/quadratic.html">Quadratic</a></li>
                 <li><a href="cubic/cubic.html">Cubic</a></li>
-                <!--<li><a href="quartic/quartic.html">Quartic</a></li>-->
+                <li><a href="quartic/quartic.html">Quartic</a></li>
             </ul>
         </nav>
 
