--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -22,7 +22,7 @@
                     <li><a href="../index.html">Main page</a></li>
                     <li class="current">Quadratic</li>
                     <li><a href="../cubic/cubic.html">Cubic</a></li>
-                    <!--<li><a href="../quartic/quartic.html">Quartic</a></li>-->
+                    <li><a href="../quartic/quartic.html">Quartic</a></li>
                 </ul>
             </nav>
         </header>
