--- a/quartic/quartic.html
+++ b/quartic/quartic.html
@@ -12,8 +12,9 @@
         <link rel="stylesheet" href="../styles/styles.css">
 
         <script src="../scripts/complex.js" defer></script>
-        <script src="../quadratic/quadracricEquation.js" defer></script>
+        <script src="../quadratic/quadraticEquation.js" defer></script>
         <script src="../cubic/cubicEquation.js" defer></script>
+        <script src="quarticEquation.js" defer></script>
         <script src="dataProcessing4.js" defer></script>
     </head>
     <body>
